--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" href="style-fb.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="image/png" href="http://img2.wikia.nocookie.net/__cb20140716192827/mario-fanon/es/images/2/26/Paper_Toadette.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
@@ -16,6 +18,13 @@
 >
 
 	<h1>Tic Tac Toe</h1>
+	<div id="new-game" ng-click='newGame()'>
+		NEW GAME
+	</div>
+	<div id="win-count" ng-click='newGame()'>
+		<p id="player1score" ng-bind="'Nintendo Controller: ' + players[players.length-2].winCount"></p>
+		<p id="player2score" ng-bind="'Spaceship: ' + players[players.length-1].winCount"></p>
+	</div>
 	<div id="container">
 		<div
 			ng-class="{square: true,
