--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style-fb.css">
+	<link rel="stylesheet" href="/Users/brookefox/Dropbox/wdi/animate.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="http://img2.wikia.nocookie.net/__cb20140716192827/mario-fanon/es/images/2/26/Paper_Toadette.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
+	<script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="script-firebase.js"></script>
 	<title>Brooke's Tic Tac Toe</title>
 </head>
@@ -17,7 +19,7 @@
 	ng-controller="tictacController"
 >
 
-	<h1>Tic Tac Toe</h1>
+	<h1 class="pulse">Tic Tac Toe</h1>
 	<div id="new-game" ng-click='newGame()'>
 		NEW GAME
 	</div>
