--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="http://img2.wikia.nocookie.net/__cb20140716192827/mario-fanon/es/images/2/26/Paper_Toadette.png">
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 	<script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="script-firebase.js"></script>
+
 	<title>Brooke's Tic Tac Toe</title>
 </head>
 
@@ -24,8 +26,8 @@
 		NEW GAME
 	</div>
 	<div id="win-count" ng-click='newGame()'>
-		<p id="player1score" ng-bind="'Nintendo Controller: ' + players[players.length-2].winCount"></p>
-		<p id="player2score" ng-bind="'Spaceship: ' + players[players.length-1].winCount"></p>
+		<p ng-bind="'Nintendo Controller: ' + players[players.length-2].winCount"></p>
+		<p ng-bind="'Spaceship: ' + players[players.length-1].winCount"></p>
 	</div>
 	<div id="container">
 		<div
